[gd_scene load_steps=10 format=2]

[ext_resource path="res://Nodes/AnimatedAutotile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Building/ConstructRoom.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Building/Construct/pull_arrow_left.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Building/Construct/pull_arrow_down.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Building/Construct/pull_arrow_right.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Building/Construct/pull_arrow_up.png" type="Texture" id=6]
[ext_resource path="res://Assets/Themes/Theme.tres" type="Theme" id=9]
[ext_resource path="res://GUI/Handles/Handles.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Tiles/ConstructRoofTileSet.tres" type="TileSet" id=14]

[node name="ConstructRoom" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]

[node name="Walls" type="Node2D" parent="."]

[node name="Roof" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -8 )
tile_set = ExtResource( 14 )

[node name="Handles" parent="." instance=ExtResource( 13 )]

[node name="Arrows" type="Node2D" parent="."]
visible = false
z_index = 10

[node name="Right" type="TextureButton" parent="Arrows"]
margin_right = 24.0
margin_bottom = 24.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="Arrows/Right"]
modulate = Color( 1, 1, 1, 0.490196 )
margin_left = -22.0
margin_right = 2.0
margin_bottom = 24.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureButton" parent="Arrows"]
margin_right = 24.0
margin_bottom = 24.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="Arrows/Left"]
modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 22.0
margin_right = 46.0
margin_bottom = 24.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="TextureButton" parent="Arrows"]
margin_right = 24.0
margin_bottom = 24.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="Arrows/Up"]
modulate = Color( 1, 1, 1, 0.490196 )
margin_top = 21.0
margin_right = 24.0
margin_bottom = 45.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="TextureButton" parent="Arrows"]
margin_right = 24.0
margin_bottom = 24.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="Arrows/Down"]
modulate = Color( 1, 1, 1, 0.490196 )
margin_top = -21.0
margin_right = 24.0
margin_bottom = 3.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 12.0
margin_bottom = 20.0
rect_min_size = Vector2( 34, 34 )
theme = ExtResource( 9 )
text = "Edit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="handle_drag_released" from="Handles" to="." method="_on_handle_drag_released"]
[connection signal="pressed" from="Arrows/Right" to="." method="_on_ArrowRight_pressed"]
[connection signal="pressed" from="Arrows/Right/Back" to="." method="_on_ArrowRightBack_pressed"]
[connection signal="pressed" from="Arrows/Left" to="." method="_on_ArrowLeft_pressed"]
[connection signal="pressed" from="Arrows/Left/Back" to="." method="_on_ArrowLeftBack_pressed"]
[connection signal="pressed" from="Arrows/Up" to="." method="_on_ArrowUp_pressed"]
[connection signal="pressed" from="Arrows/Up/Back" to="." method="_on_ArrowUpBack_pressed"]
[connection signal="pressed" from="Arrows/Down" to="." method="_on_ArrowDown_pressed"]
[connection signal="pressed" from="Arrows/Down/Back" to="." method="_on_ArrowDownBack_pressed"]
[connection signal="pressed" from="EditButton" to="." method="_on_EditButton_pressed"]
